--- a/HorizonNing/pom.xml
+++ b/HorizonNing/pom.xml
@@ -5,10 +5,14 @@
     <parent>
         <groupId>com.hubspot</groupId>
         <artifactId>Horizon</artifactId>
-        <version>0.1.3-SNAPSHOT</version>
+        <version>0.2.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>HorizonNing</artifactId>
+
+    <properties>
+        <pom.path>${project.build.directory}/${project.artifactId}-${project.version}.pom</pom.path>
+    </properties>
 
     <dependencies>
         <dependency>
@@ -16,12 +20,24 @@
             <artifactId>HorizonCore</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.ning</groupId>
+            <groupId>org.asynchttpclient</groupId>
             <artifactId>async-http-client</artifactId>
         </dependency>
         <dependency>
             <groupId>io.netty</groupId>
-            <artifactId>netty</artifactId>
+            <artifactId>netty-common</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-codec-http</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-handler</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-transport</artifactId>
         </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
@@ -53,14 +69,21 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-shade-plugin</artifactId>
-                    <configuration>
+                    <configuration combine.self="override">
+                        <shadeTestJar>true</shadeTestJar>
+                        <shadeSourcesContent>true</shadeSourcesContent>
+                        <shadedArtifactAttached>false</shadedArtifactAttached>
+                        <createDependencyReducedPom>true</createDependencyReducedPom>
+                        <promoteTransitiveDependencies>true</promoteTransitiveDependencies>
+                        <dependencyReducedPomLocation>${pom.path}</dependencyReducedPomLocation>
+                        <!-- TODO -->
                         <artifactSet>
-                            <includes combine.self="append">
+                            <includes>
                                 <include>com.ning:async-http-client</include>
                                 <include>io.netty:netty</include>
                             </includes>
                         </artifactSet>
-                        <relocations combine.self="append">
+                        <relocations>
                             <relocation>
                                 <pattern>com.ning.http</pattern>
                                 <shadedPattern>com.hubspot.horizon.shaded.com.ning.http</shadedPattern>
@@ -74,5 +97,19 @@
                 </plugin>
             </plugins>
         </pluginManagement>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <phase>package</phase>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
     </build>
 </project>
