--- a/pom.xml
+++ b/pom.xml
@@ -5,39 +5,24 @@
   <parent>
     <groupId>com.hubspot</groupId>
     <artifactId>basepom</artifactId>
-    <version>15.13</version>
+    <version>25.3</version>
   </parent>
 
   <artifactId>Horizon</artifactId>
+  <version>0.2.0-SNAPSHOT</version>
   <packaging>pom</packaging>
-  <version>0.1.3-SNAPSHOT</version>
   <description>Simple interfaces for making HTTP requests</description>
-  <url>https://github.com/HubSpot/Horizon</url>
-
-  <scm>
-    <connection>scm:git:git@github.com:HubSpot/Horizon.git</connection>
-    <developerConnection>scm:git:git@github.com:HubSpot/Horizon.git</developerConnection>
-    <url>git@github.com:HubSpot/Horizon.git</url>
-    <tag>HEAD</tag>
-  </scm>
-
-  <developers>
-    <developer>
-      <name>Jonathan Haber</name>
-      <email>jhaber@hubspot.com</email>
-    </developer>
-  </developers>
-
-  <properties>
-    <pom.path>${project.build.directory}/${project.artifactId}-${project.version}.pom</pom.path>
-    <ning.async.version>1.9.38</ning.async.version>
-  </properties>
 
   <modules>
     <module>HorizonCore</module>
     <module>HorizonApache</module>
     <module>HorizonNing</module>
   </modules>
+
+  <properties>
+    <dep.netty.version>4.1.33.Final</dep.netty.version>
+    <dep.slf4j.version>1.7.25</dep.slf4j.version>
+  </properties>
 
   <dependencyManagement>
     <dependencies>
@@ -63,14 +48,14 @@
         <version>${project.version}</version>
       </dependency>
       <dependency>
-        <groupId>io.netty</groupId>
-        <artifactId>netty</artifactId>
-        <version>3.10.5.Final</version>
+        <groupId>org.asynchttpclient</groupId>
+        <artifactId>async-http-client</artifactId>
+        <version>2.8.1</version>
       </dependency>
       <dependency>
         <groupId>org.xerial.snappy</groupId>
         <artifactId>snappy-java</artifactId>
-        <version>1.1.2</version>
+        <version>1.1.7.3</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
@@ -108,64 +93,10 @@
     </dependency>
   </dependencies>
 
-  <build>
-    <pluginManagement>
-      <plugins>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-shade-plugin</artifactId>
-          <configuration combine.self="override">
-            <shadeTestJar>true</shadeTestJar>
-            <shadeSourcesContent>true</shadeSourcesContent>
-            <shadedArtifactAttached>false</shadedArtifactAttached>
-            <createDependencyReducedPom>true</createDependencyReducedPom>
-            <promoteTransitiveDependencies>true</promoteTransitiveDependencies>
-            <dependencyReducedPomLocation>${pom.path}</dependencyReducedPomLocation>
-            <artifactSet>
-              <includes>
-                <include>com.google.guava:guava</include>
-              </includes>
-            </artifactSet>
-            <filters>
-              <filter>
-                <artifact>com.google.guava:guava</artifact>
-                <excludes>
-                  <exclude>com/google/common/base/Optional.class</exclude>
-                  <exclude>com/google/common/util/concurrent/ListenableFuture.class</exclude>
-                </excludes>
-              </filter>
-            </filters>
-            <relocations>
-              <relocation>
-                <pattern>com.google.common</pattern>
-                <shadedPattern>com.hubspot.horizon.shaded.com.google.common</shadedPattern>
-                <excludes>
-                  <exclude>com.google.common.base.Optional</exclude>
-                  <exclude>com.google.common.util.concurrent.ListenableFuture</exclude>
-                </excludes>
-              </relocation>
-              <relocation>
-                <pattern>com.google.thirdparty.publicsuffix</pattern>
-                <shadedPattern>com.hubspot.horizon.shaded.com.google.thirdparty.publicsuffix</shadedPattern>
-              </relocation>
-            </relocations>
-          </configuration>
-        </plugin>
-      </plugins>
-    </pluginManagement>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-shade-plugin</artifactId>
-        <executions>
-          <execution>
-            <phase>package</phase>
-            <goals>
-              <goal>shade</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-    </plugins>
-  </build>
+  <scm>
+    <connection>scm:git:git@github.com:HubSpot/Horizon.git</connection>
+    <developerConnection>scm:git:git@github.com:HubSpot/Horizon.git</developerConnection>
+    <url>git@github.com:HubSpot/Horizon.git</url>
+    <tag>HEAD</tag>
+  </scm>
 </project>
