--- a/HorizonCore/pom.xml
+++ b/HorizonCore/pom.xml
@@ -8,6 +8,7 @@
     <version>0.3.3-SNAPSHOT</version>
   </parent>
 
+  <name>${project.groupId}:${project.artifactId}</name>
   <artifactId>HorizonCore</artifactId>
 
   <dependencies>
