--- a/HorizonNing/pom.xml
+++ b/HorizonNing/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>com.hubspot</groupId>
     <artifactId>Horizon</artifactId>
-    <version>0.3.4-SNAPSHOT</version>
+    <version>0.4.0-SNAPSHOT</version>
   </parent>
 
   <artifactId>HorizonNing</artifactId>
@@ -22,11 +22,11 @@
     </dependency>
     <dependency>
       <groupId>com.hubspot</groupId>
-      <artifactId>async-http-client-shaded</artifactId>
+      <artifactId>HorizonCore</artifactId>
     </dependency>
     <dependency>
-      <groupId>com.hubspot</groupId>
-      <artifactId>HorizonCore</artifactId>
+      <groupId>org.asynchttpclient</groupId>
+      <artifactId>async-http-client</artifactId>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
