--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>com.hubspot</groupId>
     <artifactId>basepom</artifactId>
-    <version>63.6</version>
+    <version>63.7-SNAPSHOT</version>
   </parent>
 
   <artifactId>Horizon</artifactId>
