--- a/HorizonCore/pom.xml
+++ b/HorizonCore/pom.xml
@@ -62,6 +62,9 @@
             <goals>
               <goal>test-jar</goal>
             </goals>
+            <configuration>
+              <skip>false</skip>
+            </configuration>
           </execution>
         </executions>
       </plugin>
