--- a/HorizonCore/pom.xml
+++ b/HorizonCore/pom.xml
@@ -65,6 +65,7 @@
             </goals>
             <configuration>
               <skip>false</skip>
+              <skipIfEmpty>false</skipIfEmpty>
             </configuration>
           </execution>
           <execution>
@@ -73,6 +74,7 @@
             </goals>
             <configuration>
               <skip>false</skip>
+              <skipIfEmpty>false</skipIfEmpty>
             </configuration>
           </execution>
         </executions>
