--- a/HorizonApache/pom.xml
+++ b/HorizonApache/pom.xml
@@ -49,6 +49,11 @@
       <artifactId>junixsocket-native-common</artifactId>
     </dependency>
     <dependency>
+      <groupId>commons-logging</groupId>
+      <artifactId>commons-logging</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
       <groupId>com.hubspot</groupId>
       <artifactId>HorizonCore</artifactId>
       <type>test-jar</type>
